--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -5,3 +5,9 @@
 	ui = true
 [push]
 	default = simple
+
+[github]
+  token = ca46b786680594f9803332bc5284658094a17aec
+
+[alias]
+	update = "pull --rebase origin master "
